--- a/index.html
+++ b/index.html
@@ -543,41 +543,10 @@
                             </div>
                         </div>
 
-                        <form name="contactForm" id="contact_form" class="row form-default" method="post" action="email.php">
-                            <div class="col-md-6">
-                                <div class="field-set">
-                                    <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" />
-                                    <div class="line-fx"></div>
-                                </div>
-
-                                <div class="field-set">
-                                    <input type="text" name="email" id="email" class="form-control" placeholder="Your Email" />
-                                    <div class="line-fx"></div>
-                                </div>
-
-                                <div class="field-set">
-                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone" />
-                                    <div class="line-fx"></div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6">
-                                <div class="field-set">
-                                    <textarea name="message" id="message" class="form-control" placeholder="Your Message"></textarea>
-                                    <div class="line-fx"></div>
-                                </div>
-                            </div>
-
-                            <div class="spacer-single"></div>
-
-                            <div class="col-md-12 text-center">
-                                <div id="submit">
-                                    <input type="submit" id="send_message" value="Submit Form" class="btn btn-custom color-2" />
-                                </div>
-                                <div id="mail_success" class="success">Your message has been sent successfully.</div>
-                                <div id="mail_fail" class="error">Sorry, error occured this time sending your message.</div>
-                            </div>
-                        </form>
+                            <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/ishtiakishti/15min" style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
 
                         <div class="spacer-double"></div>
 
