--- a/project-details-slider.html
+++ b/project-details-slider.html
@@ -33,7 +33,7 @@
                 <span class="val">Youtube</span>
 
                 <span class="title">URL</span>
-                <span class="val"><a href="http://www.envato.com">www.youtube.com</a></span>
+                <span class="val"><a href="">www.youtube.com</a></span>
 
             </div>
         </div>
