--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             <div class="col-md-8 offset-md-2">
                                 <div id="testimonial-carousel-single" class="owl-carousel owl-theme wow fadeInUp">
                                     <blockquote class="testimonial-big">
-                                        <img src="Images/people/1.jpg" alt="" />
+                                        <img src="images/people/1.jpg" alt="" />
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                                         nostrud exercitation ullamco laboris nisi ut aliquip.
 
@@ -423,7 +423,7 @@
                                     </blockquote>
 
                                     <blockquote class="testimonial-big">
-                                        <img src="Images/people/2.jpg" alt="" />
+                                        <img src="images/people/2.jpg" alt="" />
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                                         nostrud exercitation ullamco laboris nisi ut aliquip.
 
@@ -431,7 +431,7 @@
                                     </blockquote>
 
                                     <blockquote class="testimonial-big">
-                                        <img src="Images/people/3.jpg" alt="" />
+                                        <img src="images/people/3.jpg" alt="" />
                                         I'm always impressed with the services. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                                         nostrud exercitation ullamco laboris nisi ut aliquip.
 
