--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 											<p>an Analyst</p>
 											<p>a Developer</p>
                                             <p></p>
-											<p>ABC XYZ</p>
+											<p>ABC YZ</p>
 										</div>
 										<div class="typed"></div>
 									</div>
