--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <!-- logo begin -->
                                     <div id="logo">
                                         <a href="index.html">
-                                            ABC XYZ
+                                            ABC YZ
                                         </a>
                                     </div>
                                     <!-- logo close -->
